--- a/views/inicio.ejs
+++ b/views/inicio.ejs
@@ -5,4 +5,6 @@
 <h4>Celular: <%= celular %> </h4>
 <h4>Correo: <%= correo %> </h4>
 
+<button><a href="/"> Ver Usuarios</a></button>
+
 <%- include ("templates/pie") %>
