--- a/web/css/estilos.css
+++ b/web/css/estilos.css
@@ -4,11 +4,11 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 form{
-    margin-top: 20px;
+    margin-top: 150px;
     width: 310px;
-    box-shadow: 0 0 20px pink;
+    box-shadow: 0 0 20px rgb(10, 121, 174);
     padding: 30px;
-    border-radius: 7px;
+    border-radius: 30px;
 }
 .contenedor{
     display: flex;
@@ -20,16 +20,16 @@ input{
     margin-top: 5px;
     margin-bottom: 15px;
     padding: 7px;
-    background-color: rgb(237, 218, 234);
+    background-color: rgb(232, 240, 254);
     border: 0px;
     border-radius: 5px;
-    outline-color: rgb(251, 0, 255);
+    outline-color: rgb(10, 121, 174);
     width: 80%;
 }
 button{
     margin-top: 20px;
     padding: 7px;
-    background-color: rgb(239, 164, 243);
+    background-color: rgb(10, 121, 174);
     color: white;
     border: 0px;
     cursor: pointer;
@@ -37,32 +37,33 @@ button{
 }
 
 button:hover{
-    background-color: aquamarine;
+    background-color: rgb(124, 217, 250);
+    color: black;
 }
 .correcto{
-    background-color: rgb(125, 227, 145);
-    border: 1px solid green;
+    background-color: rgb(142, 220, 185);
+    border: 1px solid rgb(142, 220, 185);
 }
 
 .error{
     background-color: rgb(236, 151, 151);
-    border: 1px solid red;
+    border: 1px solid rgb(236, 151, 151);
 }
 
-.circleCrossNombre, .circleCrossCelular, .circleCrossCorreo{
+.circleCrossNombre, .circleCrossCelular, .circleCrossCorreo, .circleCrossDescripcion, .circleCrossPrecio{
     margin-left: 5px;
-    color: rgb(168, 0, 0);
+    color: rgb(236, 151, 151);
 }
 
 .ocultar{
 visibility: hidden;
 }
 
-.mensajeNombre, .mensajeCelular, .mensajeCorreo{
-    color: rgb(168, 0, 0);
+.mensajeNombre, .mensajeCelular, .mensajeCorreo, .mensajeDescripcion, .mensajePrecio{
+    color: rgb(236, 151, 151);
     font-size: small;
 }
 
-.circleCheckNombre, .circleCheckCelular, .circleCheckCorreo{
-    color: rgb(0, 190, 16);
+.circleCheckNombre, .circleCheckCelular, .circleCheckCorreo, .circleCheckDescripcion, .circleCheckPrecio{
+    color: rgb(142, 220, 185);
 }
